# ge3t_shim_tool

./: .gitignore  .pre-commit-config.yaml  ExsiGui.py  LICENSE  README.md  config.json  configTemplate.json  dicomUtils.py  exsi_client.py  gui.py  guiUtils.py  main.py  pyproject.toml  requirements.txt  serial_finder.sh  shimCompute.py  shimTool.py  shim_client.py  utils.py
arduinoCode/: shim_arduino.ino  t3spi.cpp  t3spi.h  util.h
examples/: test_exsi.ipynb  test_exsi.py  use_exsi_script.py
logs/: arduino_log.txt  scanner_log.txt
shimTool/: ExsiGui.py  Gui.py  Tool.py  dicomUtils.py  exsiProcess.py  exsi_client.py  gui.py  guiUtils.py  shimCompute.py  shimTool.py  shim_client.py  styles.qss  utils.py
shim_arduino/: hardware.h  shim_arduino.ino  t3spi.cpp  util.h
src/: main.py
src/arduinoCode/: hardware.h
src/examples/: test_exsi.ipynb  test_exsi.py
src/experiments/: EvalData.ipynb  characterizeGradients.ipynb  helpersFunctions.py  understandCenterFrequency.ipynb  understandShimLoopPerformance.ipynb  understandToolPerformance.ipynb
src/shimTool/: Gui.py  Tool.py  dicomUtils.py  exsiProcess.py  exsi_client.py  guiUtils.py  shimCompute.py  shim_client.py  utils.py
