[tool.black]
line-length = 120
target-version = ['py310', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs         # exclude directories
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GE3T_SHIM_TOOL"
version = "0.01"

[tool.pytest.ini_options]
pythonpath = "src"
